jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
      - name: jenkins
        image: jenkins/jenkins:2.164-alpine
        ports:
        - containerPort: 8080
          name: frontend
        - containerPort: 50000
          name: slave
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 3
