jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
  - protocol: TCP
    name: frontend
    port: 80
    targetPort: 8080
  - protocol: TCP
    name: agent
    port: 50000
    targetPort: 50000
