jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: jenkins-service
          servicePort: 80
